Fidex blog home css. fixed layout issues in about and home page.

--- a/src/styling/Layout.css
+++ b/src/styling/Layout.css
@@ -122,9 +122,27 @@ img{
   margin-bottom: 1.5em;
 }
 
+.py-4{
+  padding-top: 1em;
+  padding-bottom: 1em;
+}
+
 .py-5{
   padding-top: 1.5em;
   padding-bottom: 1.5em;
+}
+
+.mx-5{
+  margin-right: 1.5em;
+  margin-left: 1.5em; 
+}
+
+.mr-5{
+  margin-right: 1.5em;
+}
+
+.mb-5{
+  margin-bottom: 1.5em;
 }
 
 .mb-100px{
@@ -147,7 +165,7 @@ img{
   background: white;
   position: absolute;
   left: -15%;
-  z-index: -1;
+  z-index: 0;
 }
   /* theme and color settings */
 
